Update copyright year and owner in footer

--- a/index.html
+++ b/index.html
@@ -1519,7 +1519,7 @@
         </div>
         
         <div class="footer-info">
-            <p class="copyright">&copy; 2024 Adnan. All Rights Reserved.</p>
+            <p class="copyright">&copy; 2026 Mr Jutt. All Rights Reserved.</p>
             <p class="footer-quote">"Turning complex problems into elegant solutions."</p>
         </div>
     </footer>
